# snake-game

./: .gitignore  CMakeLists.txt  CMakePresets.json  achievements.h  ai_player.h  common.h  neural_network.h  snake.cpp
assets/: style.css
data/: snake_game
graphics/: gfx.cpp  gfx.h  gfx_style.cpp  gfx_style.h
include/ai/: ai_player.h  expert_data.h  neural_network.h
include/core/: common.h  config.h  game_state.h  input_handler.h  pch.h  system.h
include/game/: achievements.h  game_logic.h  renderer.h
include/graphics/: gfx.h  gfx_style.h  gfx_type.h
include/misc/: colors.h
libs/: colors.h  example.cpp
scripts/: build_fast.sh  run.sh  setup_ccache.sh
src/: main.cpp
src/ai/: expert_data.cpp
src/core/: config.cpp  game_state.cpp  input_handler.cpp  system.cpp
src/game/: game_logic.cpp  renderer.cpp
src/graphics/: gfx.cpp  gfx_style.cpp
